# vega-agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  install.sh  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/root/vega/.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: context-tree.md  contributing.md  index.md  installation.md  privacy.md  quickstart.md  workflows.md
src/vega/: __init__.py  __main__.py  cli.py  config.py  gateway.py
src/vega/context_tree/: __init__.py  db.py  migration.py  node.py  pruning.py
src/vega/daemon/: __init__.py
src/vega/memory/: __init__.py  vector.py
src/vega/model/: __init__.py  ollama_helper.py  providers.py  router.py
src/vega/privacy/: __init__.py  audit.py  boundary.py  encrypt.py
src/vega/skills/: __init__.py
src/vega/tools/: __init__.py
src/vega/workflows/: __init__.py
tests/: test_cli.py  test_config.py  test_context_tree.py  test_memory.py  test_model.py  test_privacy.py
