[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vega-agent"
version = "0.1.0"
description = "Vega — Your Personal AI. Installed. Private."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jaskirat Singh Grewal", email = "megatron.j41@gmail.com"},
]
requires-python = ">=3.11"
keywords = ["ai", "agent", "personal-ai", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "chromadb>=0.5.0",
    "httpx>=0.27",
    "rich>=13.0",
    "openai>=1.0",
]

[project.optional-dependencies]
hermes = ["hermes-agent>=0.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "build>=1.0",
    "twine>=5.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/vega-agent/vega"
Repository = "https://github.com/vega-agent/vega"
Documentation = "https://vega-agent.github.io/vega"
Issues = "https://github.com/vega-agent/vega/issues"

[project.scripts]
vega = "vega.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vega"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]